# write_flux

./: .gitmodules  Cargo.toml  LICENSE  README.md  endpoint.json  measurement.template.json
.github/workflows/: rust-clippy.yml  rust.yml
src/: main.rs
test/: measurements.12.json  measurements.1k.json
