[package]
name        = "write_flux"
version     = "0.0.5"
keywords    = ["write_flux", "influxdb", "influxdb2", "influxdb-client"]
description = "Influxdb2 point client"
edition     = "2021"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = "symbols"          # strip symbols
opt-level = "z"            # optimize for size
#opt-level =  3            # optimize for preformance
lto = "fat"                # Link-time optimization (LTO)
codegen-units = 1          # Sequential Link-time optimization
target-cpu="native"        # Target the native CPU
panic = "abort"            # don't bother backtracing

[features]
default     = ["native-tls"]
native-tls  = ["reqwest/native-tls"]
rustls      = ["reqwest/rustls-tls"]


[dependencies] # In alphabetical order
chrono        = { version = "0.4.23" }
clap          = { version = "4.1.6", features = ["derive", "cargo"] }
clap-verbosity-flag = { version = "2.0.0" }
env_logger    = { version = "0.10.0" }
futures       = { version = "0.3" }
influxdb2     = { path="../influxdb2", version = "0.3", features = ["rustls"], default-features = false }
log           = { version = "0.4.1" }
nom           = { version = "7.1.3" }
opentelemetry = { version = "0.18" }
prelude       = { version = "0.2" }
reqwest       = { version = "0.11" , features = ["blocking","json"] }
serde         = { version = "1.0.152" }
serde_derive  = { version = "1.0.152"  }
serde_json    = { version = "1.0.93" }
tokio         = { version = "1.25", features = ["full"]  }
